# pickflix

./: .gitignore  ISTRUZIONI_CUSTOM_GPT.md  app_hiphop.py  app_songs.py  avvia.bat  avvia_hiphop.bat  cannes2025.txt  data.json  emozioni.txt  hiphop.html  index.html  movies_and_ratings.txt  piccioni_system_prompt.txt  songs.html
.github/workflows/: scrape.yml
audio-matcher/backend/: .env.example  pytest.ini  requirements-native.txt  requirements.txt
audio-matcher/backend/app/: config.py  main.py
audio-matcher/backend/app/routers/: jobs.py  models.py  plugins.py
audio-matcher/backend/tests/: test_audio_features.py  test_container_export.py  test_container_vstpreset_export.py  test_jobs_api.py  test_llm_orchestrator_live.py  test_optimizer.py  test_optimizer_real_plugin.py  test_plugin_defs_real.py  test_plugin_host.py  test_plugin_scanner.py  test_vstpreset_writer.py
audio-matcher/container-plugin/: CMakeLists.txt  README.md
audio-matcher/container-plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
audio-matcher/frontend/: index.html  package-lock.json  package.json  vite.config.js
audio-matcher/frontend/src/: App.jsx  api.js  index.css
book-carousel-ext/: background.js  carousel.html  carousel.js  content.js  manifest.json  popup.html  popup.js
kiwi-fast-nav/: background.js  content.css  content.js  manifest.json  popup.css  popup.html  popup.js
scraper/: actions.py  build_gpt_profile.py  extract_chords.py  scrape_hiphop_artists.py  scrape_piero_piccioni.py
scraper/.github/workflows/: scrape.yml
(+17 files in other folders)
